organise css; fix css bug with title and table on mobile

--- a/public/static/custom.css
+++ b/public/static/custom.css
@@ -1,27 +1,15 @@
+/*************************************
+***** Header
+*************************************/
 .logo-header {
   float: left;
   margin-right: 10px;
   width: 36px;
 }
 
-.vimeo-embed-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
-  margin-bottom: 20px;
+header.masthead.masthead h1 {
+  word-break: break-word;
 }
-.vimeo-embed-container iframe,
-.vimeo-embed-container object,
-.vimeo-embed-container embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
 header.masthead.masthead--view {
   background-image: url('img/bg--view.jpg');
 }
@@ -48,9 +36,45 @@ header.masthead.masthead--cars-quotes {
   background-image: url('img/bg--car-suv.jpg');
 }
 
+@media (max-width: 992px) {
+  /* mobile only */
+  header.masthead h1 {
+    font-size: 1.75rem;
+  }
+}
+
+
+/*************************************
+***** Vimeo container
+*************************************/
+.vimeo-embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  margin-bottom: 20px;
+}
+.vimeo-embed-container iframe,
+.vimeo-embed-container object,
+.vimeo-embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+/*************************************
+***** Tables
+*************************************/
 table.table--prices {
+  display: block;
+  width: 100%;
   max-width: 600px;
   margin: 0 auto 20px;
+  overflow: scroll;
 }
 table.table--prices tr {
   text-align: left;
@@ -60,6 +84,10 @@ table.table--prices tr td:last-child {
   text-align: right;
 }
 
+
+/*************************************
+***** Misc
+*************************************/
 a.link--dark {
   color: #111111!important;
 }
@@ -70,7 +98,10 @@ a.link--dark {
   left: 10px;
 }
 
-/* themes */
+
+/*************************************
+***** Misc
+*************************************/
 .theme--main {
   --theme-color: #96141a;/* this is red-ish */
   --theme-color--darker: #801116;
